<resources>
    <string name="app_name">Practica_RadioButton</string>
    <string name="txt_valor1">Primer Valor</string>
    <string name="txt_valor2">Segundo Valor</string>
    <string name="rb_sumar">Sumar</string>
    <string name="rb_resta">Restar</string>
    <string name="rb_producto">Multiplicar</string>
    <string name="rb_division">Dividir</string>
    <string name="button">Calcular</string>
    <string name="tv_resultado">Resultado</string>
</resources>
